--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "bootstrap": "^5.3.2",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "jquery": "^3.7.1",
     "next": "13.5.2",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-owl-carousel": "^2.3.3",
     "react-responsive-carousel": "^3.2.23"
   }
 }
